--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
     <!-- ml5 -->
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-    <script src="nn.js"></script>
+    <script src="snake.js"></script>
+    <script src="ga.js"></script>
     <script src="index.js"></script>
     
   </head>
